--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.10.1",
+    "react-prism": "^4.3.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.0",
