--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.2.3",
     "react-player": "^2.10.1",
     "react-prism": "^4.3.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.2.3",
     "sass": "^1.54.0",
+    "tsparticles": "^2.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
